@startuml classDiagram

' Define classes
class Booking {
  +Date apptDate
  +String timeSlot
  +ObjectId company
  +ObjectId user
  +Date createdAt
}

class Company {
  +String name
  +String description
  +String address
  +String website
  +String tel
  +List<BookedSlot> bookedSlots
  +static List<String> getAvailableTimeSlots()
}

class BookedSlot {
  +Date date
  +String timeSlot
}

class User {
  +String name
  +String email
  +String role
  +String password
  +String tel
  +String resetPasswordToken
  +Date resetPasswordExpire
  +Date createdAt
  +getSignedJwtToken()
  +matchPassword(enteredPassword)
}

' Relationships
BookedSlot "0..*" --> "1" Company

Booking "0..*" --> "1" Company
Booking "0..3" --> "1" User

@enduml